<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2ft_action_server</name>
  <version>0.1.0</version>
  <description>Action server for OnRobot RG2-FT gripper (ROS 2 port)</description>

  <maintainer email="gilberto@example.com">Gilberto Lopez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>onrobot_rg2ft_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

