<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2ft_description</name>
  <version>0.0.1</version>
  <description>OnRobot RG2FT gripper description files for ROS 2</description>

  <maintainer email="ian@todo.todo">ian</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

