<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2ft_msgs</name>
  <version>1.0.0</version>
  <description>Messages for OnRobot RG2FT gripper</description>
  <maintainer email="A01637071@tec.mx">GIlberto López</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
